[workspace]
resolver = "2"

members = [
    "push-gateway"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/cuprous-au/push-gateway.git"
homepage = "https://github.com/cuprous-au/push-gateway.git"

[workspace.dependencies]
async-stream = "0.3.6"
axum = "0.8.7"
clap = "4.5.53"
env_logger = "0.11.8"
git-version = "0.3.9"
humantime = "2.3.0"
log = "0.4.29"
moka = "0.12.11"
nom-openmetrics = "0.2.0"
tokio = "1.48.0"
tokio-stream = "0.1.17"
